Added public meta tags.

--- a/anderleshop/public/index.html
+++ b/anderleshop/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Hlib Arseniuk, Matej Foltin, Vojta Anderle">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site is full stack application with backend and frontend. "
     />
     <link rel="stylesheet" href="./main.css" />
     <title>React App</title>
