--- a/anderleshop/public/index.html
+++ b/anderleshop/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site is full stack application with backend and frontend. "
     />
+    <meta name="keyword" content="formula, shop, cars, eshop, lol">
     <link rel="stylesheet" href="./main.css" />
     <title>React App</title>
   </head>
