Fix of the nginx and logo.

--- a/anderleshop/public/index.html
+++ b/anderleshop/public/index.html
@@ -10,8 +10,9 @@
       content="Web site is full stack application with backend and frontend. "
     />
     <meta name="keyword" content="formula, shop, cars, eshop, lol">
+    <link rel="icon" href="./logo.png" />
     <link rel="stylesheet" href="./main.css" />
-    <title>React App</title>
+    <title>Anderle Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
